examples/test/testpolicy9382.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9382
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key48: value9
      key5: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value13
      podSelector:
        matchLabels:
          key34: value40
          key27: value37
          key6: value3
